@@ -80,6 +80,9 @@ endif()
 option(WITH_WEBSOCKETS "Include websockets support?" ON)
 option(WITH_WEBSOCKETS_BUILTIN "Websockets support uses builtin library? Set OFF to use libwebsockets" ON)
 
+if(WITH_WEBSOCKETS AND NOT WITH_TLS)
+	message(FATAL_ERROR "WITH_WEBSOCKETS support requires WITH_TLS.")
+endif()
 option(WITH_SRV "Include SRV lookup support?" OFF)
 option(WITH_STATIC_LIBRARIES "Build static versions of the libmosquitto/pp libraries?" OFF)
 option(WITH_PIC "Build the static library with PIC (Position Independent Code) enabled archives?" OFF)
