@@ -179,4 +179,4 @@ localdocker : reallyclean
 	cd dockertmp/; tar -zcf mosq.tar.gz mosquitto-${VERSION}/
 	cp dockertmp/mosq.tar.gz docker/local
 	rm -rf dockertmp/
-	cd docker/local && docker build . -t eclipse-mosquitto:local
+	cd docker/local && docker build . -t eclipse-mosquitto:local --build-arg VERSION=${VERSION}
