@@ -19,7 +19,7 @@ build_variants = [
     'WITH_SYSTEMD',
     'WITH_SYS_TREE',
     'WITH_THREADING',
-    #'WITH_TLS',
+    'WITH_TLS',
     'WITH_TLS_PSK',
     'WITH_UNIX_SOCKETS',
     'WITH_WEBSOCKETS',
