@@ -15,12 +15,12 @@ ENV \
 
 LABEL \
     org.opencontainers.image.authors="Roger Light <roger@atchoo.org>" \
-    org.opencontainers.image.title="mosquitto" \
+    org.opencontainers.image.title="eclipse-mosquitto" \
     org.opencontainers.image.description="Eclipse Mosquitto MQTT Broker" \
     org.opencontainers.image.url="https://mosquitto.org/" \
     org.opencontainers.image.documentation="https://mosquitto.org/documentation/" \
     org.opencontainers.image.source="https://github.com/eclipse-mosquitto/mosquitto" \
-    org.opencontainers.image.licenses="EPL-2.0" \
+    org.opencontainers.image.licenses="EPL-2.0 OR BSD-3-Clause" \
     org.opencontainers.image.version=${VERSION}
 
 RUN set -x && \
