@@ -11,6 +11,7 @@
 //int mosquitto_base64_decode(const char *in, unsigned char **decoded, unsigned int *decoded_len);
 
 
+#ifdef WITH_TLS
 static void check_encode(const char *input, size_t in_len, const char *expected_output)
 {
 	char *encoded;
@@ -159,3 +160,4 @@ int init_base64_tests(void)
 
 	return 0;
 }
+#endif
