@@ -9,6 +9,16 @@
   environments like kubernetes. Closes #3461.
 - Fix inconsistent disconnect log message format, and add address:port.
 - Fix `plugin`/`global_plugin` option not allowing space characters.
+- Fix $SYS load values not being published initially. Closes #3459.
+- Fix max_connections not being honoured on libwebsockets listeners. This does
+  not affect the built-in websockets support. Closes #3455.
+
+# Plugins
+- Fix incorrect linking of libmosquitto_common.so for the acl and password
+  file plugins. Closes #3460.
+
+# Build
+- Fix building with WITH_TLS=no
 
 
 2.1.0 - 2026-01-29
